--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 	<header>
-		<title>Hello World</title>
+		<title>Hello World 2</title>
 	</header>
 	<body>
-		Hello World 2!
+		Hello World 2!<br>
+		stuff goes here. <br>
+		<br>
+		more stuff!
 	</body>
